--- a/sysContable-war/web/login.xhtml
+++ b/sysContable-war/web/login.xhtml
@@ -7,7 +7,7 @@
         <meta charset="UTF-8"></meta>
         <title>SysContable</title>
         <h:outputStylesheet name="primeicons/primeicons.css" library="primefaces" />
-        <link href="./resources/css/estilo.css" rel="stylesheet" type="text/css"/>
+        <link href="./resources/css/login.css" rel="stylesheet" type="text/css"/>
         <h:outputStylesheet name="primefaces-nova-light/theme.css" />
         
         <script>
