--- a/sysContable-war/web/login.xhtml
+++ b/sysContable-war/web/login.xhtml
@@ -7,17 +7,8 @@
         <meta charset="UTF-8"></meta>
         <title>SysContable</title>
         <h:outputStylesheet name="primeicons/primeicons.css" library="primefaces" />
-        <link href="./resources/css/login.css" rel="stylesheet" type="text/css"/>
+        <h:outputStylesheet library="css" name="login.css" />
         <h:outputStylesheet name="primefaces-nova-light/theme.css" />
-        
-        <script>
-            window.onload = function() {
-                // Función para recargar la página cada 60 segundos
-                setInterval(function(){
-                    window.location.reload();
-                }, 60000); // 60000 milisegundos = 60 segundos
-            }
-        </script>
     </h:head>
     <h:body>
         <h:form>
